<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_face_black_18dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/baseline_people_outline_black_18dp"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/baseline_people_outline_black_18dp"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_statute"
            android:icon="@drawable/baseline_receipt_black_18dp"
            android:title="@string/statute" />
        <item
            android:id="@+id/nav_violation"
            android:icon="@drawable/baseline_new_releases_black_18dp"
            android:title="@string/violation"
            android:visible="false"/>
    </group>

</menu>
