<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".client.activity.ProfileEditActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:text="" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/prompt_surname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:text="" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/birthdayDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_birthday"
            android:layout_margin="@dimen/fab_margin"
            />

        <TextView
            android:id="@+id/birthdayNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"

            />

        <Button
            android:id="@+id/pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/prompt_pickup_date"
            android:layout_margin="@dimen/fab_margin"
            />

    </LinearLayout>


    <Switch
        android:id="@+id/genderSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/prompt_gender_woman"
        />

    <Button
        android:id="@+id/profile_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_accept"
        android:onClick="updateProfile"
        />

</LinearLayout>