<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".client.activity.NewPostActivity">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_panel"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/write_here"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/postImage"
            android:adjustViewBounds="true"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="send_new_post"
                android:text="@string/send"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/add_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="add_photo_from_gallery"
                android:text="@string/add_photo"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/create_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_photo"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>