<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/detailed_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/use_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/userProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="@dimen/profile_picture_display_size"
                    android:layout_height="@dimen/profile_picture_display_size"
                    android:background="@drawable/picture_border" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp" />

                    <TextView
                        android:id="@+id/profileSurname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp" />

                    <Button
                        android:id="@+id/profile_edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="profileEdit"
                        android:text="@string/prompt_edit" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userProfile"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/birthdayDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_birthday" />

                <TextView
                    android:id="@+id/genderDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_gender" />

                <TextView
                    android:id="@+id/emailDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_elements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userProfile"
                android:layout_margin="@dimen/fab_margin"
                android:layout_toEndOf="@id/profile_description"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_description"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <include
                    layout="@layout/post_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>